# hzen

./: .gitignore  README.md  dzenbar.cabal  hzen.cabal
examples/: simple.hs
examples/bitmaps/: LICENSE
src/: Main.hs
src/Reactive/Banana/: Dzen.hs  Monitors.hs  Sources.hs
src/Reactive/Banana/Dzen/: Bars.hs  Color.hs  Graphics.hs  Process.hs  Time.hs  Widget.hs
src/Reactive/Banana/Dzen/Internal/: Config.hs  Widget.hs
src/Reactive/Banana/Dzen/Unsafe/: Position.hs
src/Reactive/Banana/Monitors/: Class.hs  Cpu.hs  Mem.hs  Swap.hs  Tick.hs  Time.hs
src/Reactive/Banana/Monitors/Internal/: Procfs.hs
